[package]
name = "bayespam"
version = "1.2.0"
authors = ["Thomas Didion <thomas.didion@protonmail.com>"]
edition = "2021"

description = "A simple bayesian spam classifier."
homepage = "https://github.com/thomasdidion/bayespam"
repository = "https://github.com/thomasdidion/bayespam"

keywords = ["bayesian", "spam", "classifier"]
categories = ["science"]
readme = "README.md"
license = "MIT"

[dependencies]
unicode-segmentation = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
